WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196697
LibWebRTCMediaEndpoint does not need to hop to the signaling thread to gather stats
https://bugs.webkit.org/show_bug.cgi?id=196697
Summary
LibWebRTCMediaEndpoint does not need to hop to the signaling thread to gather...
youenn fablet
Reported
2019-04-08 10:18:17 PDT
LibWebRTCMediaEndpoint does not need to hop to the signaling thread to gather stats
Attachments
Patch
(2.29 KB, patch)
2019-04-08 10:23 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(5.15 KB, patch)
2019-04-08 12:52 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-04-08 10:18:38 PDT
<
rdar://problem/47477113
>
youenn fablet
Comment 2
2019-04-08 10:23:28 PDT
Created
attachment 366948
[details]
Patch
youenn fablet
Comment 3
2019-04-08 12:52:42 PDT
Created
attachment 366968
[details]
Patch
WebKit Commit Bot
Comment 4
2019-04-08 13:22:17 PDT
Comment on
attachment 366968
[details]
Patch Clearing flags on attachment: 366968 Committed
r244034
: <
https://trac.webkit.org/changeset/244034
>
WebKit Commit Bot
Comment 5
2019-04-08 13:22:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug