Cherry-pick r244034. rdar://problem/49790376

LibWebRTCMediaEndpoint does not need to hop to the signaling thread to gather stats
    https://bugs.webkit.org/show_bug.cgi?id=196697
    <rdar://problem/47477113>

    Reviewed by Eric Carlson.

    It is not thread safe to use m_backend in another thread than the main thread.
    It is not useful anymore to hop to the signaling thread to gather stats.
    No change of behavior.

    * Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
    (WebCore::LibWebRTCMediaEndpoint::getStats):
    (WebCore::LibWebRTCMediaEndpoint::gatherStatsForLogging):

    Canonical link: https://commits.webkit.org/210973@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244034 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/207701.432@safari-607-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607-branch@244166 268f45cc-cd09-0410-ab3c-d52691b4dbfc